@@ -49,8 +49,33 @@ class PessimisticLockingTestSqlserver < ActiveRecord::TestCase
         end
       end
     end
+    
+    should 'simply add lock to find all' do
+      assert_sql %r|SELECT \* FROM \[people\] WITH \(NOLOCK\)| do
+        Person.all(:lock => 'WITH (NOLOCK)')
+      end
+    end
 
   end
+  
+  context 'For paginated finds' do
+    
+    setup do
+      20.times { |n| Person.create!(:first_name => "Thing_#{n}") }
+    end
+    
+    should 'cope with un-locked paginated results' do
+      tally_not_locked = %r|SELECT count\(\*\) as TotalRows from \(SELECT TOP 1000000000 \* FROM \[people\]\s+WITH \(NOLOCK\) \) tally|
+      inner_tmp_not_locked = %r|SELECT TOP 15 \* FROM \[people\] WITH \(NOLOCK\)|
+      # Currently association limiting is not locked like the parent.
+      association_limiting_not_locked = %r|SELECT \[readers\]\.\* FROM \[readers\] WITH \(NOLOCK\) WHERE \(\[readers\]\.person_id IN \(1,2,3,4,5\)\)|
+      assert_sql(tally_not_locked,inner_tmp_not_locked) do
+        Person.all(:include => :readers, :lock => 'WITH (NOLOCK)', :limit => 5, :offset => 10)
+      end
+    end
+
+  end
+  
   
   context 'For dueling concurrent connections' do
     
